--- a/cloudinit.yml
+++ b/cloudinit.yml
@@ -46,14 +46,14 @@ write_files:
   permissions: '0644'
   content: |
     [Unit]
-    Description=The Redis Server container
+    Description=The Vault Server container
     After=docker.service
     Requires=docker.service
     PartOf=docker.service
     [Service]
     EnvironmentFile=/etc/default/vault-server
     ExecStartPre=-/usr/bin/docker rm -f vault-server
-    ExecStart=/usr/bin/docker run --name vault-server --hostname $(hostname).${cluster_id} --rm -v /var/lib/vault:/var/lib/vault:z -v /etc/vault:/etc/vault:ro --env-file=/etc/default/vault-server --network=host -p ${vault_port}:${vault_port} --cap-add=IPC_LOCK vault:${vault_version} __REDIS_MASTER_REPLICATION__
+    ExecStart=/usr/bin/docker run --name vault-server --hostname $(hostname).${cluster_id} --rm -v /var/lib/vault:/var/lib/vault:z -v /etc/vault:/etc/vault:ro --env-file=/etc/default/vault-server --network=host -p ${vault_port}:${vault_port} --cap-add=IPC_LOCK vault:${vault_version}
     ExecStop=/usr/bin/docker stop vault-server
     SyslogIdentifier=vault-server
     Restart=always
