--- a/cloudinit.yml
+++ b/cloudinit.yml
@@ -39,11 +39,11 @@ write_files:
 - path: /etc/default/vault
   permissions: '0644'
   content: |
-    VAULT_ADDR="https://__VAULT_NODE_ADDR__:8200"
-    VAULT_CLUSTER_ADDR="https://${vault_cluster}"
-    VAULT_TLS_SERVER_NAME="${vault_cluster}"
-    AWS_DEFAULT_REGION="${aws_region}"
-    AWS_DYNAMODB_TABLE="${dynamodb_table}"
+    VAULT_ADDR=https://__VAULT_NODE_ADDR__:8200
+    VAULT_CLUSTER_ADDR=https://${vault_cluster}
+    VAULT_TLS_SERVER_NAME=${vault_cluster}
+    AWS_DEFAULT_REGION=${aws_region}
+    AWS_DYNAMODB_TABLE=${dynamodb_table}
 - path: /etc/systemd/system/vault-server.service
   permissions: '0644'
   content: |
